force-app/main/default/objects/Team_Profile_and_KPI__c/Team_Profile_and_KPI__c.object-meta.xml
<CustomObject>
    <label>Team Profile and KPI</label>
    <nameField>
        <displayFormat>TPK-{0000000000}</displayFormat>
        <label>Team Profile and KPI Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Team Profile and KPI</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>