force-app/main/default/objects/Team_Profile_and_KPI__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Address</label>
    <length>150</length>
    <type>Text</type>
</CustomField>