force-app/main/default/objects/Team_Profile_and_KPI__c/fields/ATM_Transaction__c.field-meta.xml
<CustomField>
    <fullName>ATM_Transaction__c</fullName>
    <label>ATM Transaction</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>