force-app/main/default/objects/Team_Profile_and_KPI__c/fields/Average_Bankwide__c.field-meta.xml
<CustomField>
    <fullName>Average_Bankwide__c</fullName>
    <label>Average Bankwide</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>