force-app/main/default/objects/Team_Profile_and_KPI__c/fields/Branch_Type__c.field-meta.xml
<CustomField>
    <fullName>Branch_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Branch Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>