force-app/main/default/objects/Team_Profile_and_KPI__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Channel</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>