force-app/main/default/objects/Team_Profile_and_KPI__c/fields/Digital_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Digital_Transaction__c</fullName>
    <label>Digital Transaction</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>