force-app/main/default/objects/Team_Profile_and_KPI__c/fields/Hub_Name__c.field-meta.xml
<CustomField>
    <fullName>Hub_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Hub Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>