force-app/main/default/objects/Team_Profile_and_KPI__c/fields/Inbound_Sale_Rank_Bankwide__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Sale_Rank_Bankwide__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Inbound Sale Rank (Bankwide)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>