force-app/main/default/objects/Team_Profile_and_KPI__c/fields/KPI__c.field-meta.xml
<CustomField>
    <fullName>KPI__c</fullName>
    <label>KPI</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>