force-app/main/default/objects/Team_Profile_and_KPI__c/fields/Net_Promoter_Score__c.field-meta.xml
<CustomField>
    <fullName>Net_Promoter_Score__c</fullName>
    <label>Net Promoter Score</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>