force-app/main/default/objects/Team_Profile_and_KPI__c/fields/Number_of_Branch_Zone__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Branch_Zone__c</fullName>
    <label>Number of Branch (Zone)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>