force-app/main/default/objects/Team_Profile_and_KPI__c/fields/Number_of_Inbound_Sales_Bankwide__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Inbound_Sales_Bankwide__c</fullName>
    <label>Number of Inbound Sales (Bankwide)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>