force-app/main/default/objects/Team_Profile_and_KPI__c/fields/Office_Hour__c.field-meta.xml
<CustomField>
    <fullName>Office_Hour__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Office Hour</label>
    <length>30</length>
    <type>Text</type>
</CustomField>