force-app/main/default/objects/Team_Profile_and_KPI__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Phone</label>
    <length>30</length>
    <type>Text</type>
</CustomField>