force-app/main/default/objects/Team_Profile_and_KPI__c/fields/Rank_Zone__c.field-meta.xml
<CustomField>
    <fullName>Rank_Zone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rank: Zone</label>
    <length>10</length>
    <type>Text</type>
</CustomField>