force-app/main/default/objects/Team_Profile_and_KPI__c/fields/T_Performance_Team__c.field-meta.xml
<CustomField>
    <fullName>T_Performance_Team__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>T-Performance Team</label>
    <referenceTo>T_Performance_Team_List__c</referenceTo>
    <relationshipLabel>Team Profile and KPI</relationshipLabel>
    <relationshipName>Team_Profile_and_KPI</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>