force-app/main/default/objects/Team_Profile_and_KPI__c/fields/Team_Name_TH__c.field-meta.xml
<CustomField>
    <fullName>Team_Name_TH__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Team Name TH</label>
    <length>50</length>
    <type>Text</type>
</CustomField>