force-app/main/default/objects/Team_Profile_and_KPI__c/fields/Total_Active_Customer__c.field-meta.xml
<CustomField>
    <fullName>Total_Active_Customer__c</fullName>
    <label>Total Active Customer</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>