force-app/main/default/objects/Team_Profile_and_KPI__c/fields/Working_Day__c.field-meta.xml
<CustomField>
    <fullName>Working_Day__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Working Day</label>
    <length>30</length>
    <type>Text</type>
</CustomField>